# rrrrrrrrr

./: pyproject.toml  requirements.txt
project/: Dockerfile  auth.py  requirements.txt  schema.py  sendmail.py  user.py  useradd.py  usermanagement.py
project/security/: jwt.py
project/templates/: index.html  index2.html
