[tool.poetry]
name = "your-app-name"
version = "0.1.0"
description = "Your FastAPI app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.100.0"
uvicorn = "0.23.0"
sqlalchemy = "2.0.0"
psycopg2-binary = "2.9.5"
pydantic = "1.10.4"
python-dotenv = "1.0.0"
gunicorn = "20.1.0"
Jinja2 = "3.1.2"
bcrypt = "4.0.1"
PyJWT = "2.6.0"
python-decouple = "3.8.0"
email-validator = "*"

[tool.poetry.dev-dependencies]
# (Optional: Add any dev dependencies here)
